--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ hr {
     opacity:1;
 }
 #banner{
-     background-image: url("Images/img/banner/2.jpg");
+     background-image: url("Images/img/banner2.jpg");
     width: 100%;
     height: 60vh;
     background-size: cover;
@@ -371,4 +371,5 @@ footer .copyright a:hover {
     margin: 0 12px 20px 0;
     display: flex;
     justify-content: flex-end;
+
 }
